--- a/.github/workflows/export-site.yml
+++ b/.github/workflows/export-site.yml
@@ -1,91 +1,43 @@
-name: Export Kobweb site
+# Name of the workflow
+name: Deploy Kobweb Site to GitHub Pages
 
+# Run this workflow every time you push to the "main" branch
 on:
-  workflow_dispatch: #A
+  push:
+    branches: [main] # Trigger on pushes to main
+
+# Permissions needed to write to the gh-pages branch
+permissions:
+  contents: write
 
 jobs:
-  export_and_upload:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-
-    env:
-      KOBWEB_CLI_VERSION: 0.9.21
-
+  # Job to build and deploy the site
+  deploy:
+    runs-on: ubuntu-latest # Use the latest Ubuntu runner
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      # 1. Checks out your repository's code so the workflow can access it
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # 2. Sets up the Java Development Kit (JDK) version 17, required by Kobweb
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: 11
+          java-version: '17'
+          distribution: 'temurin' # Use Eclipse Temurin distribution of Java
 
-      # When projects are created on Windows, the executable bit is sometimes lost. So set it back just in case.
-      - name: Ensure Gradle is executable
-        run: chmod +x gradlew
+      # 3. Installs the Kobweb command-line tool using the official action
+      - name: Install Kobweb
+        uses: varabyte/kobweb-cli-action@v1 # Use the official Kobweb action
 
-      # B
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
+      # 4. Runs the 'kobweb export' command to build the static site
+      # The output goes into the .kobweb/site directory by default
+      - name: Export Site
+        run: kobweb export
 
-      # C
-      - name: Query Browser Cache ID
-        id: browser-cache-id
-        run: echo "value=$(./gradlew -q :site:kobwebBrowserCacheId)" >> $GITHUB_OUTPUT
-
-      # Also C
-      - name: Cache Browser Dependencies
-        uses: actions/cache@v4
-        id: playwright-cache
+      # 5. Deploys the exported site files to the 'gh-pages' branch
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          path: ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ steps.browser-cache-id.outputs.value }}
-
-      - name: Fetch kobweb
-        uses: robinraju/release-downloader@v1.9
-        with:
-          repository: "varabyte/kobweb-cli"
-          tag: "v${{ env.KOBWEB_CLI_VERSION }}"
-          fileName: "kobweb-${{ env.KOBWEB_CLI_VERSION }}.zip"
-          tarBall: false
-          zipBall: false
-
-      - name: Unzip kobweb
-        run: unzip kobweb-${{ env.KOBWEB_CLI_VERSION }}.zip
-
-      - name: Run export
-        run: |
-          cd site
-          ../kobweb-${{ env.KOBWEB_CLI_VERSION }}/bin/kobweb export --notty --layout static
-
-      # D
-      - name: Upload site
-        uses: actions/upload-artifact@v4
-        with:
-          name: site
-          path: site/.kobweb/site/
-          if-no-files-found: error
-          retention-days: 1
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+          branch: gh-pages # The branch the action should deploy to
+          folder: .kobweb/site # The folder in your repo containing the built site
