--- a/site/.kobweb/conf.yaml
+++ b/site/.kobweb/conf.yaml
@@ -1,15 +1,14 @@
+---
 site:
-  title: "Umdevclub"
-  routePrefix: "GDCWebsite"
-
+  title: Umdevclub
+  basePath: GDCWebsite #<-- Exactly two spaces before this
 server:
   files:
     dev:
-      contentRoot: "build/processedResources/js/main/public"
-      script: "build/kotlin-webpack/js/developmentExecutable/umdgdc.js"
-      api: "build/libs/umdgdc.jar"
+      contentRoot: build/processedResources/js/main/public
+      script: build/kotlin-webpack/js/developmentExecutable/umdgdc.js
+      api: build/libs/umdgdc.jar
     prod:
-      script: "build/kotlin-webpack/js/productionExecutable/umdgdc.js"
-      siteRoot: ".kobweb/site"
-
+      script: build/kotlin-webpack/js/productionExecutable/umdgdc.js
+      siteRoot: .kobweb/site
   port: 8080
